# OpenVassal

./: .env.example  .gitignore  Makefile  README.md  agents.yaml  conftest.py  pyproject.toml  setup.sh
docker/: Dockerfile  docker-compose.yml
openvassal/: __init__.py  config.py  main.py  memory.py  models.py  orchestrator.py
openvassal/agents/: __init__.py  base.py  coding.py  daily_work.py  registry.py  steward.py  tools.py
openvassal/plans/: manager.py
openvassal/web/: server.py
openvassal/web/static/: chat.html  index.html
subordinates/: config.py  main.py
subordinates/agents/: __init__.py  base.py  coding.py  daily_work.py  registry.py  steward.py
subordinates/plans/: __init__.py  manager.py
subordinates/web/: __init__.py  server.py
subordinates/web/static/: index.html
tests/: test_memory.py  test_orchestrator.py  test_plans.py  test_registry.py  test_store.py
